test/should-fail/检查类型-9.j
function n takes nothing returns nothing
endfunction

function a takes handle h returns nothing
    call a(n())
endfunction
